8273605: VM Exit does not abort concurrent mark

Reviewed-by: kbarrett, sjohanss